lib/tools/orbit/test_output/advanced_runcore_test.output
Flow compiler (3rd generation)

Processing 'orbit' on http server

tests/advanced_runcore_test.orb: tests/advanced_runcore_test.orb:21:14: Parse error
let cmp = if a > b then 1 else if a < b then -1 else 0;
             ^
